# media-tagger-bot

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  Start_MediaTaggerBot.bat  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
config/: canonical_overrides.toml  config.example.toml
docs/: API_NOTES.md  OPERATIONS.md  VERIFICATION.md
scripts/: request_stop.py  smoke_test.py
src/mediataggerbot/: apply_readiness.py  asset_metadata.py  cache.py  canonicalization.py  config.py  databases.py  diagnostics.py  ffprobe.py  fingerprint.py  genre.py  inventory_cache.py  launcher_attestation.py  logging_setup.py  main.py  matcher.py  metadata.py  models.py  operation_journal.py  pathing.py  portable_stop.py  project_repair.py  (+10 more)
tests/: conftest.py  test_api_resilience.py  test_apply_safety_regressions.py  test_asset_metadata.py  test_asset_metadata_v052.py  test_bat_menu_static.py  test_canonicalization.py  test_control_plane_resilience.py  test_diagnostics.py  test_fingerprint_cache.py  test_genre_mapping.py  test_hardening.py  test_hardening_v051.py  test_identifier_shortcuts.py  test_matching_safety.py  test_naming_and_metadata.py  test_path_and_write_readiness.py  test_preflight_redaction.py  test_recovery_and_diagnostics.py  test_recursive_scanner.py  test_runtime_stability.py  test_stability_v041.py  test_triage_stability_v050.py  test_upgrade_v051.py  test_v053_production_evidence_fixes.py  test_v054_stability_usability.py  test_version_identity.py  test_windows_path_config_recovery.py
tools/: README.md
